added readme and frontend updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,26 @@
 asgiref==3.8.1
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
 Django==5.1.6
 django-rest-framework==0.1.0
 djangorestframework==3.15.2
+google-api-core==2.24.1
+google-auth==2.38.0
+google-cloud-vision==3.10.0
+googleapis-common-protos==1.68.0
+grpcio==1.70.0
+grpcio-status==1.70.0
+idna==3.10
 pillow==11.1.0
+proto-plus==1.26.0
+protobuf==5.29.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pypng==0.20220715.0
 PyQRCode==1.2.1
+requests==2.32.3
+rsa==4.9
 sqlparse==0.5.3
 tzdata==2025.1
+urllib3==2.3.0
